--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dh-cargo (2) UNRELEASED; urgency=medium
+
+  * Update package description with additional documentation.
+
+ -- Josh Triplett <josh@joshtriplett.org>  Fri, 23 Dec 2016 23:06:17 -0800
+
 dh-cargo (1) experimental; urgency=medium
 
   * Initial Release.
