--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-dh-cargo (4) UNRELEASED; urgency=medium
+dh-cargo (4) unstable; urgency=medium
 
   * Pass cargo-version not Debian-version to `cargo install`.
   * Pass debuginfo=2 and LDFLAGS when building.
   * Add other flags to support cross-compiling.
 
- -- Ximin Luo <infinity0@debian.org>  Wed, 06 Jun 2018 19:50:22 -0700
+ -- Ximin Luo <infinity0@debian.org>  Fri, 08 Jun 2018 00:18:42 -0700
 
 dh-cargo (3) unstable; urgency=medium
 
