Work around a stupid ftpmaster rule about files with old dates

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ dh-cargo (5) UNRELEASED; urgency=medium
 
   * Pass `--cap-lints warn` in rustflags to avoid builds breaking when rustc
     adds new warnings.
+  * Work around a stupid ftpmaster rule about files with old dates.
 
  -- Ximin Luo <infinity0@debian.org>  Mon, 18 Jun 2018 00:51:31 -0700
 
